# bookstore

./: Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  views.py
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: __init__.py  test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  models.py  txt.txt  urls.py  viewsets.py
product/migrations/: 0001_initial.py  0002_remove_product_categories_product_category.py  0003_alter_category_slug.py  0004_rename_descvription_product_description.py  0005_alter_category_description_alter_category_slug_and_more.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
staticfiles/admin/css/: forms.css
staticfiles/debug_toolbar/css/: toolbar.css
