[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["mauro <mauro_leao@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.5"
djangorestframework = "3.15.2"
asgiref = "3.8.1"
sqlparse = "0.5.3"
tzdata = "2024.2"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



